@@ -24,5 +24,6 @@
 
 void dirChanged(GFileMonitor *monitor,GFile *file,GFile *other_file,GFileMonitorEvent event_type,pageStruct *page);
 gboolean buttonDown(GtkWidget *widget,GdkEventButton *event,pageStruct *page);
+void contextMenuActivate(GtkMenuItem *menuitem,pageStruct *page);
 
 #endif
